[Glitch] Fix layout shift caused by "Who to follow" widget
Port 511e10df3449d93616828db471ce6b562a075c0a to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -10757,8 +10757,10 @@ noscript {
     }
 
     &__scrollable {
+      box-sizing: border-box;
       display: flex;
       flex-wrap: nowrap;
+      min-height: 228px;
       gap: 16px;
       padding: 16px;
       scroll-snap-type: x mandatory;
